# ari_claude

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md  docker-compose.yml  new1.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  constants.py  enums.py  errors.py  logging.py  response.py  security.py
backend/app/dependencies/: auth.py  db.py  scope.py
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  farm.py  follow_up.py  note_item.py  notebook_entry.py  notification.py  organization.py  tree.py  upload_job.py  user.py  zone.py
backend/app/repositories/: auth.py  base.py  farms.py  follow_ups.py  note_items.py  notebook_entries.py  notifications.py  trees.py  upload_queue.py  zones.py
backend/app/schemas/: auth.py  common.py  farm.py  file.py  follow_up.py  note_item.py  notebook_entry.py  notification.py  sync.py  tree.py  upload_queue.py  zone.py
backend/app/services/: auth.py  base.py  farm_service.py  file_service.py  follow_up_service.py  note_item_service.py  notebook_service.py  notification_service.py  sync_service.py  tree_service.py  upload_queue_service.py  zone_service.py
backend/app/tests/: test_app_startup.py  test_auth_api.py  test_auth_service.py  test_auth_utils.py  test_database_imports.py  test_farm_api.py  test_farm_guards.py  test_file_api.py  test_follow_up_api.py  test_follow_up_service.py  test_health.py  test_migrations.py  test_model_metadata.py  test_note_item_api.py  test_note_item_service.py  (+8 more)
(+111 files in other folders)
